--- a/admin_app/templates/admin_work_history.html
+++ b/admin_app/templates/admin_work_history.html
@@ -1,13 +1,13 @@
 {% extends 'sidebar.html' %}
 
-{% block title %}งานทั้งหมด{% endblock %}
+{% block title %}จัดการผู้ใช้{% endblock %}
 
 {% block content %}
 <div class="container-sm my-5">
     <div class="my-1 mx-4">
-        <h1>งานทั้งหมด</h1>
+        <h1>ประวัติงานทั้งหมด</h1>
         <a class="btn btn-primary my-3" href="{%url 'worker_show2' %}"><i class="bi bi-card-checklist"></i>&nbsp;  ช่างซ่อมทั้งหมด</a>
-        <a class="btn btn-secondary my-3" href="{%url 'admin_work_history' %}"><i class="bi bi-hourglass-bottom"></i>&nbsp;  ประวัติงานทั้งหมด  </a>
+        <a class="btn btn-secondary my-3" href="{%url 'assign_display' %}"><i class="bi bi-card-checklist"></i>&nbsp;  งานทั้งหมด  </a>
         
           <table class="table">
             <thead>
@@ -19,12 +19,15 @@
                 <th scope="col">วันที่หมอบหมาย</th>
                 <th scope="col">วันที่ครบกำหนด</th>
                 <th scope="col"></th>
-                <th scope="col"></th>
               </tr>
             </thead>
             <tbody class="table-group-divider">
               {% for i in assign %}
-              <tr>
+              {% if i.status == '3' %}
+              <tr class="table-success">
+              {% else %}
+              <tr class="table-danger">
+              {% endif %}
                 <th scope="row">{{i.id}}</th>
                 <td>{{i.work_request.car_part}}</td>
                 <td>{{i.work_request.car_brand}}</td>
@@ -36,7 +39,6 @@
                 <td></td>
                 {% endif %}
                 <td><a class="btn btn-primary" href="{%url 'admin_work_detail' i.id %}">รายละเอียด</a></td>
-                <td><a class="btn btn-danger" href="{%url 'delete_assign' i.id %}"><i class="bi bi-trash"></i>&nbsp;ลบ</a></td>
               </tr>
               {% endfor %}
             </tbody>
