--- a/user_cart/templates/cart.html
+++ b/user_cart/templates/cart.html
@@ -40,13 +40,19 @@
                                         <div class="col-md-2 col-lg-2 col-xl-2">
                                             <img src="{{i.product.picture.url}}" class="img-fluid rounded-3">
                                         </div>
+                                        
                                         <div class="col-md-3 col-lg-3 col-xl-3">
-                                            <h6 class="text-black mb-0">{{i.amount}} x {{i.product.product_name}}</h6>
+                                            <h6 class="text-black mb-0">{{i.product.product_name}}</h6>
                                         </div>
-                                        <div class="col-md-3 col-lg-2 col-xl-3 offset-lg-1">
+                            
+                                        <div class="col-md-3 col-lg-2 col-xl-3">
                                             <h6 class="mb-0">{{ i.sum | intcomma }}</h6>   
                                         </div>
-                                        
+                                        <div class="col d-flex justify-content-end align-items-center">
+                                            <a href="{%url 'pos_dec' i.id %}" class="btn btn-outline-dark btn-sm me-2"><i class="bi bi-dash"></i></a>
+                                            <div type="text" class="form-control-sm"><div class="form-control">{{i.amount}}</div></div>
+                                            <a href="{%url 'pos_inc' i.id %}" class="btn btn-outline-dark btn-sm ms-2"><i class="bi bi-plus"></i></a>
+                                        </div>
                                         <div class="col-md-1 col-lg-1 col-xl-1 text-end">
                                             <a href="{%url 'delete_cart' i.product.id %}"><h5><i class="bi bi-trash3"></i></h5></a>
                                          </div>
@@ -67,7 +73,7 @@
                                     <form action="{%url 'deliver' %}" method="POST">
                                         {% csrf_token %}
                                         <input type="radio" id="send" name="deli_se" value="sendhome">
-                                        <label for="send" class="mb-3">ส่งไปยังบ้านคุณ</label><br>
+                                        <label for="send" class="mb-3">ส่งไปยังบ้านคุณ</label><small class="mx-2 text-danger">(ส่งเฉพาะภายในจังหวัดอุบลเท่านั้น)</small><br>
                                         <input type="radio" id="take" name="deli_se" value="pickup">
                                         <label for="take" class="mb-5">รับที่ร้าน</label><br>
                                             <button type="submit" class="btn btn-primary w-100 text-center" data-mdb-ripple-color="dark">
