--- a/user_order/templates/payment.html
+++ b/user_order/templates/payment.html
@@ -6,13 +6,14 @@
 {% endblock %}
 
 {% block content %}
-<section class="container-md py-5 my-5 d-flex justify-content-center" style="height: 50rem;">
+<section class="container-md py-5 my-5 d-flex justify-content-center">
     <div class="h-100 w-75 border rounded shadow" style="background-color: #e9e9e9;">
         <div class="mt-5">
             <div class="d-flex justify-content-center">
                 <div class>
                     <p class="text-center" >ยอดที่ต้องชำระ: {{order.total}}</p>
                     <p class="text-center">กรุณาชำระภายใน 24 ชั่วโมง</p>
+                    <p class="text-center">หากไม่ชำระภายใน 24 ชั่วโมง ระบบจะลบการสั่งซื้อของคุณ</p>
                     <div class="text-center">
                         <img class="" src="https://promptpay.io/0972080499/{{orders.total}}.png" alt="slip">
                     </div>
@@ -25,9 +26,9 @@
                     <div>
                         <form action="{%url 'payment' order.id %}" method="post" enctype="multipart/form-data">
                             {% csrf_token %}
-                            <input type="file" name="payment" accept="payment/*" required>
+                            <input class="form-control" type="file" name="payment" accept="payment/*" required>
                             <div class="d-flex  justify-content-center">
-                            <button type="submit" class="d-block btn btn-primary mt-4 w-25" style="background-color: #a4db74; color:black">
+                            <button type="submit" class="d-block btn btn-primary my-4 w-25" style="background-color: #a4db74; color:black">
                                 ต่อไป
                             </button>
                             </div>
