--- a/worker_app/templates/work_calendar.html
+++ b/worker_app/templates/work_calendar.html
@@ -124,12 +124,63 @@
                       <p class="card-text">สถานะ : {{i.get_status_display}}</p>
                       <p class="card-text">วันที่ครบกำหนด: {{i.end_date | date:"d / m / Y"  }}</p>
                       <div>
-                        <a href="{%url 'work_detail' i.id %}" class="btn btn-primary">รายละเอียด</a>
+                        <a href="{%url 'work_detail' i.id %}" class="btn btn-primary"><i class="bi bi-card-list">&nbsp;</i>รายละเอียด</a>
+                        <button class="btn btn-warning" data-bs-target="#exampleModalToggle{{i.id}}" data-bs-toggle="modal"><i class="bi bi-pencil-square">&nbsp;</i>แก้ไขสถานะ</button>
                       </div>
                     </div>
                   </div>
+                  <form action="{%url 'change_status' i.id %}" method="POST">
+                    {% csrf_token %}
+                    <div class="modal fade" id="exampleModalToggle{{i.id}}" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+                        <div class="modal-dialog modal-dialog-centered">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h1 class="modal-title fs-5" id="exampleModalToggleLabel{{i.id}}">แก้ไขสถานะ</h1>
+                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="my-3">
+                                    <label for="cars">สถานะ :</label>
+                                    <select id="cars" class="form-control" name="status">
+                                        <option value="{{i.status}}" hidden>{{i.get_status_display}}</option>
+                                        <option value="2">กำลังดำเนินการ</option>
+                                        <option value="3">ดำเนินการเสร็จสิ้น</option>
+                                    </select>
+                                </div>
+                                <div class="my-3">
+                                    <label for="note">หมายเหตุ :</label>
+                                    {% if assign.note != None %}
+                                    <textarea name="note" class="form-control" id="note">{{i.note}}</textarea>
+                                    {% else %}
+                                    <textarea name="note" class="form-control" id="note"></textarea>
+                                    {% endif %}
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                              <button class="btn btn-primary" type="submit">ยืนยัน</button>
+                              <button type="button" class="btn btn-danger" data-bs-dismiss="modal">ยกเลิก</button>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                </form>
                 </div>
+                
                 {% endfor %}
+                <div class="d-flex justify-content-center">
+                    <nav aria-label="product-pagination" class="media-container-row">
+                        <ul class="pagination pagination-md">
+                          {% for i in assign2.paginator.page_range %}
+                            {% if i != assign2.number  %}
+                            <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+                            {% else %}
+                            <li class="page-item active"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+                            {% endif %}
+                          {% endfor %}
+                        </ul>
+                    </nav>
+                </div>
+                
                 
               </div>
               
@@ -140,25 +191,22 @@
         </div>
 
     <script>
-        // Get all div elements with the specified class name
+
         var divElements = document.querySelectorAll('.calendar-day');
     
-        // Object to store the count of each value
+
         var valueCount = {};
     
-        // Loop through each div element
+
         divElements.forEach(function(divElement) {
-            var value = divElement.innerHTML.trim(); // Get the inner HTML content and remove leading/trailing spaces
-            // Increase the count of the current value
+            var value = divElement.innerHTML.trim();
             valueCount[value] = (valueCount[value] || 0) + 1;
-    
-            // Check if the current value has occurred more than once
             if (valueCount[value] > 1) {
-                // Remove the second occurrence of the value
                 divElement.remove();
             }
         });
-        // Get the current date
+
+        // get month now
         const currentDate = new Date();
 
         // Array of month names
