--- a/admin_app/templates/create_repair.html
+++ b/admin_app/templates/create_repair.html
@@ -59,6 +59,7 @@
                     <option value="อีซูซุ">อีซูซุ</option>
                     <option value="โตโยต้า">โตโยต้า</option>
                     <option value="มิตซู">มิตซู</option>
+                    <option value="ไม่มี">ไม่มี</option>
                   </select>
                 </div>
                 <div class="col-md-12">
