--- a/admin_app/templates/update_product.html
+++ b/admin_app/templates/update_product.html
@@ -37,7 +37,7 @@
                 <img style="width: 300px; height: 250px;" src="{{form.instance.picture.url}}" alt="">
               </div>
               <div class="col-12 text-center">
-                <button type="submit" class="btn btn-primary" style="width: 25%;">เพิ่มสินค้า</button>
+                <button type="submit" class="btn btn-primary" style="width: 25%;">แก้ไขข้อมูลสินค้า</button>
               </div>
             </form>
           </div>
