--- a/user_cart/templates/cart.html
+++ b/user_cart/templates/cart.html
@@ -54,7 +54,7 @@
                                             <a href="{%url 'pos_inc' i.id %}" class="btn btn-outline-dark btn-sm ms-2"><i class="bi bi-plus"></i></a>
                                         </div>
                                         <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                                            <a href="{%url 'delete_cart' i.product.id %}"><h5><i class="bi bi-trash3"></i></h5></a>
+                                            <a href="{%url 'delete_cart' i.id %}"><h5><i class="bi bi-trash3"></i></h5></a>
                                          </div>
                                         </div>
                                     <hr class="my-4">
