--- a/userinterface/templates/req_display.html
+++ b/userinterface/templates/req_display.html
@@ -45,7 +45,21 @@
     </div>
     
 {% endfor %}
+<div class="d-flex justify-content-center py-3">
+    <nav aria-label="product-pagination" class="media-container-row">
+        <ul class="pagination pagination-md">
+          {% for i in w_req.paginator.page_range %}
+            {% if i != w_req.number  %}
+            <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+            {% else %}
+            <li class="page-item active"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+            {% endif %}
+          {% endfor %}
+        </ul>
+    </nav>
 </div>
+</div>
+
 
 
 {% endblock %}
