--- a/admin_app/templates/worker_show.html
+++ b/admin_app/templates/worker_show.html
@@ -11,7 +11,12 @@
         <div class="card col-4" style="width: 32%;">
             <div class="card-body ">
                 <div class="row">
+                    {% if worker.image.url != null %}
                     <div class="col-md-3"><img src="{{worker.image.url}}" alt="" style="width: 100px; height: 100px;"></div>
+
+                    {% else %}
+                    <div class="col-md-3"><img src="{%static 'images/unknow.jpg' %}" alt="" style="width: 100px; height: 100px;"></div>
+                    {% endif %}
                     <div class="col-md-9 px-5">
                         <h5 class="card-title">{{worker.firstname}} {{worker.lastname}}</h5>
                         <h5>ชื่อผู้ใช้: {{worker.worker.username}}</h5>
